# SFKJ

./: .gitignore  CMakeLists.txt  README.md  cmake_complie_arguments.txt
cmake/: FindGMP.cmake
data/: 1.config  2.config  config.txt
data/linear/: gendata  gendata.cpp
data/tpch/: customer.tbl  lineitem.tbl  orders.tbl  part.tbl  partsupp.tbl  set_annot.sql  supplier.tbl
data/tpch/data7M/: customer.tbl  orders.tbl  part.tbl  partsupp.tbl  supplier.tbl
psi_analytics_eurocrypt19/: CMakeLists.txt  demo.cpp  lineardemo.cpp  psi.cpp
psi_analytics_eurocrypt19/OEP/: OEP.cpp  OEP.h
psi_analytics_eurocrypt19/PermNet/: PermutationNetwork.cpp
psi_analytics_eurocrypt19/Purify/: PurificationCircuit.cpp  PurificationCircuit.h
psi_analytics_eurocrypt19/common/: psi_analytics.cpp
psi_analytics_eurocrypt19/join/: join.cpp  twoserverjoin.cpp
psi_analytics_eurocrypt19/ots/: ots.cpp
psi_analytics_eurocrypt19/sort/: sort.cpp
src/: CMakeLists.txt  puridemo.cpp
src/join/: join.cpp
src/secureml/: CMakeLists.txt  dpoulad.cpp  plainlinear.cpp
src/secureml/data/: data0.txt  data1.txt
test/: CMakeLists.txt
